# openarmature-examples

./: .gitignore  README.md
.github/workflows/: ci.yml
01-linear-pipeline/: main.py  pyproject.toml
02-routing-and-subgraphs/: main.py  pyproject.toml
03-explicit-subgraph-mapping/: main.py  pyproject.toml
04-observer-hooks/: main.py  pyproject.toml
