[project]
name = "03-explicit-subgraph-mapping"
version = "0.1.0"
description = "openarmature demo: same compiled subgraph at two parent sites with per-site ExplicitMapping"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.32.0",
    "openarmature>=0.3.0",
    "pydantic>=2.7",
]

[tool.uv.sources]
openarmature = { path = "../../openarmature-python", editable = true }
